<resources>
    <string name="app_name">Custom Stocks</string>

    <string name="circle">
    M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
    C985.464,783.455,780.213,988.707,527.023,988.707
    C273.832,988.707,68.5809,783.455,68.5809,530.265
    C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
  </string>

    <integer name="circle_original_width">1062</integer>
    <integer name="circle_original_height">1062</integer>


    <string name="tab_stocks">Srocks</string>
    <string name="tab_volume_by_venue">Venue</string>
    <string name="tab_search">Search</string>
    <string name="tab_financials">Financials</string>
    <string name="tab_markets">Markets</string>

    <string name="tab_more">More</string>
    <string name="tab_earning_calendar">Earnings</string>


    <string name="search_field_hint">Search for Symbol</string>

    <string name="volume_header">Volume</string>

    <string name="tape_a_text">Tape A</string>
    <string name="tape_b_text">Tape B</string>
    <string name="tape_c_text">Tape C</string>

    <string name="open">open</string>
    <string name="close">close</string>


    <string name="quote_lable_open">Open</string>
    <string name="quote_lable_close">Close</string>
    <string name="quote_lable_high">High</string>
    <string name="quote_lable_low">Low</string>
    <string name="quote_lable_latest_price">Latest price</string>
    <string name="quote_lable_latest_volume">Latest volume</string>
    <string name="quote_lable_real_time_pricw">Real time price</string>
    <string name="quote_lable_real_time_size">Real time size</string>
    <string name="quote_lable_delayed_price">Delayed price</string>
    <string name="quote_lable_extended_price">Extended price</string>
    <string name="quote_lable_extended_change">Extended change</string>
    <string name="quote_lable_extended_change_percent">Extended change %</string>
    <string name="quote_lable_previuous_close">Previous close</string>
    <string name="quote_lable_market_percent">Market %</string>
    <string name="quote_lable_volume">Volume</string>
    <string name="quote_lable_total_volume">Total volume</string>
    <string name="quote_lable_bid_price">Bid price</string>
    <string name="quote_lable_bid_size">Bid size</string>
    <string name="quote_lable_ask_price">Ask price</string>
    <string name="quote_lable_ask_size">Ask size</string>
    <string name="quote_lable_market_cup">Market cup</string>
    <string name="quote_lable_week_52_high">52 high</string>
    <string name="quote_lable_week_52_low">52 low</string>
    <string name="quote_lable_ytd_change">Ytd change</string>





</resources>
