<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/ic_stocks"
        android:title="@string/tab_stocks"/>

    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/ic_vanue"
        android:title="@string/tab_volume_by_venue"/>

    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/ic_search"
        android:title="@string/tab_search"/>
    <item
        android:id="@+id/action_item4"
        android:icon="@drawable/ic_financial"
        android:title="@string/tab_financials"/>
    <item
        android:id="@+id/action_item5"
        android:icon="@drawable/ic_calendar"
        android:title="@string/tab_earning_calendar"/>
</menu>